WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141589
JSContext Inspector: Do not stash console messages for non-debuggable JSContext
https://bugs.webkit.org/show_bug.cgi?id=141589
Summary
JSContext Inspector: Do not stash console messages for non-debuggable JSContext
Joseph Pecoraro
Reported
2015-02-13 20:08:16 PST
* SUMMARY Do not stash console messages for non-debuggable JSContext. For a JSContext in an application not inspectable, or a JSContext where remote debugging has been explicitly disabled (it is enabled by default), do not stash any console messages.
Attachments
[PATCH] Proposed Fix
(2.94 KB, patch)
2015-02-13 20:11 PST
,
Joseph Pecoraro
timothy
: review+
timothy
: commit-queue+
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(2.94 KB, patch)
2015-02-13 20:15 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-02-13 20:08:34 PST
<
rdar://problem/19752014
>
Joseph Pecoraro
Comment 2
2015-02-13 20:11:42 PST
Created
attachment 246571
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2015-02-13 20:13:05 PST
Attachment 246571
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/inspector/JSGlobalObjectInspectorController.cpp:52: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 4
2015-02-13 20:15:40 PST
Created
attachment 246572
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 5
2015-02-13 21:00:04 PST
Comment on
attachment 246572
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 246572 Committed
r180101
: <
http://trac.webkit.org/changeset/180101
>
WebKit Commit Bot
Comment 6
2015-02-13 21:00:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug