JSContext Inspector: Do not stash console messages for non-debuggable JSContext https://bugs.webkit.org/show_bug.cgi?id=141589

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-02-13
Reviewed by Timothy Hatcher.

Consider developer extras disabled for JSContext inspection if the
RemoteInspector server is not enabled (typically a non-debuggable
process rejected by webinspectord) or if remote debugging on the
JSContext was explicitly disabled via SPI.

When developer extras are disabled, console message will not be stashed.

* inspector/JSGlobalObjectInspectorController.cpp:
(Inspector::JSGlobalObjectInspectorController::developerExtrasEnabled):
* inspector/JSGlobalObjectInspectorController.h:

Canonical link: https://commits.webkit.org/159622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180101 268f45cc-cd09-0410-ab3c-d52691b4dbfc